Fix question's header size and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ div#root {
   pointer-events: none;
 }
 
+div.header {
+  height: 4rem;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
